11/9 made achievements into 3 colum grid with temperary images and text. added some styling for that in style.css and had to give permission for img in index.js
11/10 pushed icons for path levels
11/10 completed UAT
11/10 consolidated sql file. linked achievements page to sql data. made achievements more easily reproducable and implemented a locked/unlocked feature
11/11 general design for workouts page, need to still add actual workouts
11/11 Made the login the first page shown when application starts running
11/11 made change to docker-compose.yaml to attempt to fix changes
11/11 added workouts to the workout page just to have a filler. also adjusted footer so that it stays visible on the entire page instead of having it stick to bottom of the body
11/11 home page start, and meeting notes for 11/11 meeting with Jen
11/11 had to push meeting notes again cause it didn't the first time cause im stoopid
11/12 pushed working mocha negative test case (implemented it so that it does not mess with our testing)
11/12 pushed working mocha positive test case (implemented it so that it does not mess with our testing)
11/13 Added multiple weeks to the calendar, started adding real dates
11/13 Made the calendar show the current weeks date and highlight the current date with a black border
11/17 made more progress on home page, also adjusted header to stay at the top of our page, and make footer a smidge smaller to be able to see our home page a bit better
11/17 added images to home page, and added some small functionality things
11/17 added default profile picture
11/17 created a general outline for the profile page, the logout button works but the profile picture functionality still needs to be implemented
11/18 delete some sample cases, no need for them kept 1 to make as default user
11/18 linked workout data to user data, just need to add check in home to load user data
11/18 added meeting notes from TA weekly meeting