@@ -1,0 +1,5 @@
+{{#if message}}
+  <div class="alert {{#if messageClass}}{{messageClass}}{{else}}alert-danger{{/if}}" role="alert">
+    {{message}}
+  </div>
+{{/if}}
